// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the (Activity) EntryDetails component does not render the delete button on the first element 1`] = `
<div
  className="activity--body activity--body__first"
  id="activity-activity 1 key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          aria-label="Edit: Activity 1: Activity 1 Name (Money Pit)"
          component={[Function]}
          href="/apd/0123456789abcdef01234567/activity/0/overview"
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
      </div>
    }
    editText="Edit"
    heading="Activity 1: Activity 1 Name (Money Pit)"
    headingLevel="4"
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity funding source/program 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          aria-label="Edit: Activity 3: Activity Name"
          component={[Function]}
          href="/apd/0123456789abcdef01234567/activity/2/overview"
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            aria-label="Delete: Activity 3: Activity Name"
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: Activity Name"
    headingLevel="4"
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity name 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          aria-label="Edit: Activity 3: Untitled (Money Pit)"
          component={[Function]}
          href="/apd/0123456789abcdef01234567/activity/2/overview"
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            aria-label="Delete: Activity 3: Untitled (Money Pit)"
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: Untitled (Money Pit)"
    headingLevel="4"
  />
</div>
`;

exports[`the (Activity) EntryDetails component renders correctly with no activity name or funding source/program 1`] = `
<div
  className="activity--body activity--body__notfirst"
  id="activity-activity key"
>
  <Review
    className="entry-details--review"
    editContent={
      <div
        className="nowrap visibility--screen"
      >
        <Button
          aria-label="Edit: Activity 3: Untitled"
          component={[Function]}
          href="/apd/0123456789abcdef01234567/activity/2/overview"
          size="small"
          type="button"
          variation="transparent"
        >
          Edit
        </Button>
        <React.Fragment>
          <span>
            |
          </span>
          <Button
            aria-label="Delete: Activity 3: Untitled"
            className="ds-u-color--error"
            component="button"
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Delete
          </Button>
        </React.Fragment>
      </div>
    }
    editText="Edit"
    heading="Activity 3: Untitled"
    headingLevel="4"
  />
</div>
`;
